--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h1>Article Title</h1>
+            <section>
+                Article content goes here.
+            </section>
+        </article>
+    </main>
+    <footer>
+        @copyright
+    </footer>
+</body>
+</html>
